feat(angular-client): enhance POST method, image file upload, and menu
- Add optional headers parameter to POST method for flexibility.
- Update CoreModule to include HttpClient provider.
- Change Angular app listen port to 7300 and switch from HTTPS to HTTP.
- Implement file upload functionality to send image to the server.
- Adjust menu button for improved UI.

--- a/src/aixplorer.client/package.json
+++ b/src/aixplorer.client/package.json
@@ -1,13 +1,13 @@
 {
   "name": "aixplorer.client",
   "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve --host=0.0.0.0",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve --host 0.0.0.0 --port 7300",
+        "build": "ng build",
+        "watch": "ng build --watch --configuration development",
+        "test": "ng test"
+    },
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.0",
