--- a/src/AIxplorer.AI/AIxplorer.AI.csproj
+++ b/src/AIxplorer.AI/AIxplorer.AI.csproj
@@ -8,11 +8,14 @@
 
   <ItemGroup>
     <Folder Include="MachineLearning\Regression\" />
-    <Folder Include="NLP\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.20.1" />
+    <PackageReference Include="Microsoft.ML.OnnxRuntimeGenAI" Version="0.5.2" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.32.0" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.Onnx" Version="1.32.0-alpha" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
   </ItemGroup>
 
