feat: Refactor services, add gRPC, logging, and remove outdated services
- Add Grpc.AspNetCore and Grpc.AspNetCore.Server.Reflection package references (v2.67.0).
- Create appsettings.Development.Docker.json for Docker environment configuration.
- Update appsettings with ModelConfiguration, including ModelPath, Processor, and InferenceSettings.
- Configure logging to use appsettings Logging section and add console logging.
- Add gRPC service configuration with a 25 MB message size limit and enable gRPC reflection.
- Add additional CORS rules for local and Docker environments.
- Move gRPC reflection service registration inside development environment condition.
- Remove the obsolete ImageRecognitionService.
- Add new "IVisualDataInterpretationService" interface and "VisualDataInterpretationService" implementation for image processing via gRPC.
- Add new "IQuestionAnsweringService" interface and "QuestionAnsweringService" class (currently unimplemented).

--- a/src/AIxplorer.Server/appsettings.Development.json
+++ b/src/AIxplorer.Server/appsettings.Development.json
@@ -1,8 +1,27 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ModelConfiguration": {
+        "ModelPath": "..\\..\\..\\..\\AI-Models\\Phi-3.5-vision-instruct-onnx\\cpu_and_mobile\\cpu-int4-rtn-block-32-acc-level-4",
+        "Processor": {
+        },
+        "InferenceSettings": {
+        }
+    },
+    "Kestrel": {
+        "Endpoints": {
+            "Http": {
+                "Url": "http://0.0.0.0:5220",
+                "Protocols": "Http1"
+            },
+            "Grpc": {
+                "Url": "http://0.0.0.0:5225",
+                "Protocols": "Http2"
+            }
+        }
     }
-  }
 }
