--- a/src/AIxplorer.Server/AIxplorer.Server.csproj
+++ b/src/AIxplorer.Server/AIxplorer.Server.csproj
@@ -9,10 +9,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.67.0" />
+    <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.67.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="7.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AIxplorer.AI\AIxplorer.AI.csproj" />
+    <ProjectReference Include="..\AIxplorer.Grpc.Contracts\AIxplorer.Grpc.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
