--- a/src/AIxplorer.Server/AIxplorer.Server.csproj
+++ b/src/AIxplorer.Server/AIxplorer.Server.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>c7374c2e-7474-4215-a93a-b31738ba18be</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
