--- a/.gitattributes
+++ b/.gitattributes
@@ -4,7 +4,6 @@
 # Auto detect text files and perform LF normalization
 # Set the default behavior, in case people don't have core.autocrlf set.
 *                text=auto eol=lf
-
 # Explicitly declare text files you want to always be normalized and converted
 # to native line endings on checkout.
 *.cs            text eol=lf diff=csharp
@@ -13,30 +12,28 @@
 *.sln           text eol=crlf
 *.csproj        text eol=crlf
 *.esproj        text eol=crlf
+*.dcproj        text eol=crlf
+*.pyproj        text eol=crlf
 *.http          text eol=crlf
 *.user        	text eol=crlf
 *.ps1           text eol=crlf
-
-
 # The above will handle all files NOT found below
 #
 # These files are text and should be normalized (Convert crlf => lf)
 *.gitattributes text eol=lf
 .gitignore      text eol=lf
 *.md            text eol=lf diff=markdown
-
 # Denote all files that are truly binary and should not be modified.
 *.png binary
 *.jpg binary
 *.gif binary
 *.ico binary
-
+*.pb binary
 #
 # Exclude files from exporting
 #
 .gitattributes  export-ignore
 .gitignore      export-ignore
-
 #
 # Enable syntax highlighting for files with `.gitattributes` extensions.
 #
