refactor: rename project, namespace, and related classes/interfaces
- Rename project and update namespace:
  AIxplorer.AI to AIxplorer.Core

--- a/src/AIxplorer.Core/AIxplorer.Core.csproj
+++ b/src/AIxplorer.Core/AIxplorer.Core.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="MachineLearning\Regression\" />
+    <Folder Include="AI\MachineLearning\Regression\" />
+    <Folder Include="Infrastructure\" />
   </ItemGroup>
 
   <ItemGroup>
