chore: rename namespace and project reference
- update namespace: AIxplorer.AI to AIxplorer.Core
- update project reference from AIxplorer.AI.csproj to AIxplorer.Core.csproj

--- a/src/AIxplorer.ComputerVision.ImageInterpretation/AIxplorer.ComputerVision.ImageInterpretation.csproj
+++ b/src/AIxplorer.ComputerVision.ImageInterpretation/AIxplorer.ComputerVision.ImageInterpretation.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AIxplorer.AI\AIxplorer.AI.csproj" />
+    <ProjectReference Include="..\AIxplorer.Core\AIxplorer.Core.csproj" />
     <ProjectReference Include="..\AIxplorer.Grpc.Contracts\AIxplorer.Grpc.Contracts.csproj" />
   </ItemGroup>
 
