feat(docker): add AIxplorer.Nlp.QnA and AIxplorer.Vision.Interpretation services to compose setup
- added build configurations for AIxplorer.Nlp.QnA and AIxplorer.Vision.Interpretation to docker-compose.yml
- added service definitions with ports, environment variables, and volumes to docker-compose.override.yml

--- a/src/AIxplorer.Vision.Interpretation/Dockerfile
+++ b/src/AIxplorer.Vision.Interpretation/Dockerfile
@@ -1,30 +1,31 @@
-# Unter https://aka.ms/customizecontainer erfahren Sie, wie Sie Ihren Debugcontainer anpassen und wie Visual Studio dieses Dockerfile verwendet, um Ihre Images fÃ¼r ein schnelleres Debuggen zu erstellen.
+# Learn how to customize your debug container and how Visual Studio uses this Dockerfile 
+# to build images for faster debugging at https://aka.ms/customizecontainer.
 
-# Diese Stufe wird verwendet, wenn sie von VS im Schnellmodus ausgefÃ¼hrt wird (Standardeinstellung fÃ¼r Debugkonfiguration).
+# This stage is used when running from Visual Studio in fast mode (default for Debug configuration).
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
-
-# Diese Stufe wird zum Erstellen des Dienstprojekts verwendet.
+# This stage is used to build the service project.
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["AIxplorer/AIxplorer.csproj", "AIxplorer/"]
-RUN dotnet restore "./AIxplorer/AIxplorer.csproj"
+COPY ["AIxplorer.Vision.Interpretation/AIxplorer.Vision.Interpretation.csproj", "AIxplorer/"]
+RUN dotnet restore "./AIxplorer.Vision.Interpretation/AIxplorer.Vision.Interpretation.csproj"
 COPY . .
-WORKDIR "/src/AIxplorer"
-RUN dotnet build "./AIxplorer.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/AIxplorer.Vision.Interpretation"
+RUN dotnet build "./AIxplorer.Vision.Interpretation.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# Diese Stufe wird verwendet, um das Dienstprojekt zu verÃ¶ffentlichen, das in die letzte Phase kopiert werden soll.
+# This stage is used to publish the service project, which will be copied into the final stage.
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./AIxplorer.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./AIxplorer.Vision.Interpretation.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# Diese Stufe wird in der Produktion oder bei AusfÃ¼hrung von VS im regulÃ¤ren Modus verwendet (Standard, wenn die Debugkonfiguration nicht verwendet wird).
+# This stage is used in production or when running from Visual Studio in regular mode 
+# (default if not using the Debug configuration).
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "AIxplorer.dll"]
+ENTRYPOINT ["dotnet", "AIxplorer.Vision.Interpretation.dll"]
